fixed jump when searching, removed harmontown nights

--- a/src/App.css
+++ b/src/App.css
@@ -73,8 +73,8 @@ html, body {
 }
 
 .fade-in {
-  -webkit-animation: fadein 1s; /* Safari, Chrome and Opera > 12.1 */
-  -moz-animation: fadein 1s; /* Firefox < 16 */
+  -webkit-animation: fadein 1s;
+  -moz-animation: fadein 1s;
   animation: fadein 1s;
 }
 
@@ -91,5 +91,5 @@ html, body {
   transform: rotate(180deg);
   -webkit-transform: rotate(180deg);
   -ms-transform: rotate(180deg);
-  transition: transform .1s linear;
+  transition: fadein .1s linear;
 }
